fix(users): fixes params names
